--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <meta name="description" content="A comprehensive suite of free online financial calculators. Calculate EMI, SIP, fixed and recurring deposits, loan eligibility, and debt payoff. Plan your finances with Financial Calculator Pro." />
     <meta name="keywords" content="financial calculator, emi calculator, sip calculator, loan calculator, fixed deposit, recurring deposit, debt payoff, loan eligibility, finance, investment, calculator" />
     <meta name="author" content="Financial Calculator Pro" />
-    <link rel="canonical" href="https://financial-calculator-pro.example.com/" /> <!-- Replace with your actual domain -->
+    <link rel="canonical" href="https://financialcalc.onrender.com/" /> <!-- Replace with your actual domain -->
 
     <!-- Open Graph Meta Tags (for social media sharing) -->
     <meta property="og:title" content="Financial Calculator Pro - EMI, SIP, Loan & Deposit Calculators" />
     <meta property="og:description" content="A comprehensive suite of free online financial calculators for EMI, SIP, loans, and deposits." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://financial-calculator-pro.example.com/" /> <!-- Replace with your actual domain -->
-    <meta property="og:image" content="https://financial-calculator-pro.example.com/og-image.png" /> <!-- Replace with a link to a compelling image (e.g., 1200x630px) -->
+    <meta property="og:url" content="https://financialcalc.onrender.com/" /> <!-- Replace with your actual domain -->
+    <meta property="og:image" content="https://financialcalc.onrender.com/og-image.png" /> <!-- Replace with a link to a compelling image (e.g., 1200x630px) -->
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Financial Calculator Pro - EMI, SIP, Loan & Deposit Calculators" />
     <meta name="twitter:description" content="A comprehensive suite of free online financial calculators for EMI, SIP, loans, and deposits." />
-    <meta name="twitter:image" content="https://financial-calculator-pro.example.com/twitter-image.png" /> <!-- Replace with a link to a compelling image (e.g., 800x418px) -->
+    <meta name="twitter:image" content="https://financialcalc.onrender.com/twitter-image.png" /> <!-- Replace with a link to a compelling image (e.g., 800x418px) -->
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
