--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Financial Calculator Pro</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Financial Calculator Pro - EMI, SIP, Loan & Deposit Calculators</title>
+    <meta name="description" content="A comprehensive suite of free online financial calculators. Calculate EMI, SIP, fixed and recurring deposits, loan eligibility, and debt payoff. Plan your finances with Financial Calculator Pro." />
+    <meta name="keywords" content="financial calculator, emi calculator, sip calculator, loan calculator, fixed deposit, recurring deposit, debt payoff, loan eligibility, finance, investment, calculator" />
+    <meta name="author" content="Financial Calculator Pro" />
+    <link rel="canonical" href="https://financialcalc.onrender.com/" /> <!-- Replace with your actual domain -->
+
+    <!-- Open Graph Meta Tags (for social media sharing) -->
+    <meta property="og:title" content="Financial Calculator Pro - EMI, SIP, Loan & Deposit Calculators" />
+    <meta property="og:description" content="A comprehensive suite of free online financial calculators for EMI, SIP, loans, and deposits." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://financialcalc.onrender.com/" /> <!-- Replace with your actual domain -->
+    <meta property="og:image" content="https://financialcalc.onrender.com/og-image.png" /> <!-- Replace with a link to a compelling image (e.g., 1200x630px) -->
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Financial Calculator Pro - EMI, SIP, Loan & Deposit Calculators" />
+    <meta name="twitter:description" content="A comprehensive suite of free online financial calculators for EMI, SIP, loans, and deposits." />
+    <meta name="twitter:image" content="https://financialcalc.onrender.com/twitter-image.png" /> <!-- Replace with a link to a compelling image (e.g., 800x418px) -->
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -36,6 +56,28 @@
         },
       }
     </script>
+    <!-- TODO: Replace the placeholder URLs and favicon -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Financial Calculator Pro",
+      "applicationCategory": "FinancialApplication",
+      "operatingSystem": "Any",
+      "description": "A comprehensive suite of free online financial calculators. Calculate EMI, SIP, fixed and recurring deposits, loan eligibility, and debt payoff. Plan your finances with Financial Calculator Pro.",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "ratingCount": "100"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
+    <link rel="stylesheet" href="print.css" media="print" />
 </head>
   <body>
     <div id="root"></div>
